Project import generated by Copybara.
GitOrigin-RevId: 61f77b7b6ef6fbf5fc6829e17ea6d10abb5e203b

--- a/fern/.definition/files.yml
+++ b/fern/.definition/files.yml
@@ -24,6 +24,14 @@ service:
         - root.InternalServerError
         - root.ServiceUnavailableError
         - root.GatewayTimeoutError
+      examples:
+        - code-samples:
+            - sdk: curl
+              code: |
+                curl -X POST https://api.assemblyai.com/v2/upload \
+                     -H "Authorization: <apiKey>" \
+                     -H "Content-Type: application/octet-stream" \
+                     --data-binary @path/to/file
 types:
   UploadedFile:
     properties:
