Project import generated by Copybara.
GitOrigin-RevId: dda756f8870e20da00938dbdfc4eda717576860f

--- a/fern/.definition/__package__.yml
+++ b/fern/.definition/__package__.yml
@@ -34,3 +34,5 @@ types:
         type: string
         docs: Error message
       status: optional<literal<"error">>
+    source:
+      openapi: ../openapi.yml
