--- a/fern/.definition/files.yml
+++ b/fern/.definition/files.yml
@@ -24,6 +24,16 @@ service:
         - root.InternalServerError
         - root.ServiceUnavailableError
         - root.GatewayTimeoutError
+      examples:
+        - code-samples:
+            - sdk: curl
+              code: |
+                curl -X POST https://api.assemblyai.com/v2/upload \
+                     -H "Authorization: <apiKey>" \
+                     -H "Content-Type: application/octet-stream" \
+                     --data-binary @path/to/file
+  source:
+    openapi: ../openapi.yml
 types:
   UploadedFile:
     properties:
@@ -32,5 +42,5 @@ types:
         docs: >-
           A URL that points to your audio file, accessible only by AssemblyAI's
           servers
-        validation:
-          format: url
+    source:
+      openapi: ../openapi.yml
