--- a/asyncapi.yml
+++ b/asyncapi.yml
@@ -43,6 +43,7 @@ channels:
               type: string
         query:
           type: object
+          required: [sample_rate]
           properties:
             sample_rate:
               description: The sample rate of the streamed audio
@@ -52,7 +53,7 @@ channels:
             word_boost:
               description: |
                 Add up to 2500 characters of custom vocabulary.
-                The parameter value must be a JSON encoded array of strings.
+                The parameter value must be a JSON encoded array of strings. The JSON must be URL encoded like other query string parameters.
               type: string
               examples:
                 - '["foo","bar"]'
